--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"version": "0.0.1",
-  	"name": "bookmarklet_developer_tool",
-	"description": "for easier bookmarklet development",
+  	"name": "FormCompleter",
+	"description": "This is a bookmarklet for completing forms",
 	"dependencies":{
 		"gulp":"*",
 		"gulp-uglify":"*",
@@ -12,7 +12,7 @@
 	},
 	"repository": {
   		"type": "git",
-  		"url": "https://github.com/steelydylan/bookmarklet_developer_tool.git"
+  		"url": "https://github.com/steelydylan/FormCompleter.git"
 	},
 	"settings":{
 		"port":"8000",
